<resources>
    <!-- Текст -->
    <string name="app_name">Playlist maker</string>
    <string name="settings">Настройки</string>
    <string name="media_library">Медиатека</string>
    <string name="search">Поиск</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="EULA">Пользовательское соглашение</string>
    <string name="dark_theme">Тёмная тема</string>
    <!-- Ссылки -->
    <string name="app_share_link">https://practicum.yandex.ru/android-developer-plus/</string>
    <string name="user_agreement_url">https://yandex.ru/legal/practicum_offer/</string>
    <!-- Другое -->
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>

    <string name="track_cover">Изображение обложки</string>
    <string name="placeholder_no_results">Ничего не нашлось</string>
    <string name="placeholder_server_error_text">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh_button_text">Обновить</string>

    <string name="search_history_title">Вы искали</string>
    <string name="clear_history_button_text">Очистить историю</string>
    <string name="clear_history">Очистить историю</string>
    <string name="you_searched">Вы искали</string>

    <string name="unknown_track_name">Трек без названия</string>
    <string name="unknown_artist_name">Неизвестный исполнитель</string>

    <string name="track_artwork_description">Обложка трека</string>
    <string name="add_to_playlist_description">Добавить в плейлист</string>
    <string name="play_pause_button_description">Кнопка воспроизведения/паузы</string>
    <string name="add_to_favorites_description">Добавить в избранное</string>
    <string name="album_name">Название альбома</string>
    <string name="release_year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="Duration">Длительность</string>
    <string name="Album">Альбом</string>
    <string name="Year">Год</string>
    <string name="Genre">Жанр</string>
    <string name="Country">Страна</string>
    <string name="your_media_library_is_empty">Ваша медиатека пуста</string>
    <string name="favorites_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="new_playlist_button">Новый плейлист</string>
    <string name="no_playlist">Вы не создали\n ни одного плейлиста</string>
    <string name="default_timer">00:00</string>
    <string name="add_to_playlist_title">Добавить в плейлист</string>
    <string name="playlist_name_hint">Название*</string>
    <string name="playlist_description_hint">Описание</string>
    <string name="create_playlist_button">Создать</string>
    <string name="playlist_created">Плейлист %1$s создан</string>
    <string name="added_to_playlist">Добавлено в плейлист %1$s</string>
    <string name="already_added_to_playlist">Трек уже добавлен в плейлист %1$s</string>
    <string name="share_playlist">Поделиться</string>
    <string name="edit_playlist_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>

    <plurals name="tracks_count">
        <item quantity="one">%1$d трек</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d треков</item>
    </plurals>

    <plurals name="minutes_count">
        <item quantity="one">%1$d минута</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="many">%1$d минут</item>
        <item quantity="other">%1$d минут</item>
    </plurals>
    <string name="finish_playlist_creation_title">Завершить создание плейлиста?</string>
    <string name="finish_playlist_creation_message">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="no_tracks_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share_playlist_title">Поделиться плейлистом</string>
    <string name="delete_playlist_dialog_title">Хотите удалить плейлист «%1$s»?</string>
    <string name="delete_track_dialog_title">Хотите удалить трек?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="yes_caps">ДА</string>
    <string name="no_caps">НЕТ</string>
    <string name="playlist_stats">%1$s • %2$s</string>
</resources>