<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.PlaylistMaker">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/title_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/settings"
        app:titleTextAppearance="@style/ToolbarTitle"
        app:navigationIcon="@drawable/ic_arrow_back"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_space" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_darkmode"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_button_height"
        android:text="@string/dark_theme"
        android:gravity="center_vertical"
        style="@style/SettingsButton"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/btn_share"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_button_height"
        android:text="@string/share_app"
        android:drawableEnd="@drawable/ic_share"
        style="@style/SettingsButton"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/btn_support"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_button_height"
        android:text="@string/write_to_support"
        android:drawableEnd="@drawable/ic_support"
        style="@style/SettingsButton"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/btn_eula"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_button_height"
        android:text="@string/EULA"
        android:drawableEnd="@drawable/ic_arrow_foward"
        style="@style/SettingsButton"/>
</LinearLayout>
