<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.ActivityMain"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/title_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="56dp"
        app:title="@string/app_name"
        app:titleTextColor="@color/YP_White"
        app:titleTextAppearance="@style/ToolbarTitle"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_space"/>

    <Button
        android:id="@+id/search_button"
        style="@style/TittleButton"
        android:text="@string/search"
        app:icon="@drawable/ic_search" />

    <Button
        android:id="@+id/media_library_button"
        style="@style/TittleButton"
        android:text="@string/media_library"
        app:icon="@drawable/ic_library" />

    <Button
        android:id="@+id/settings_button"
        style="@style/TittleButton"
        android:text="@string/settings"
        app:icon="@drawable/ic_settings" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="28dp" />
</LinearLayout>
