<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.PlaylistMaker">

        <!-- Toolbar -->
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/playerToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:navigationIconTint="@color/YP_Black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Обложка -->
        <ImageView
            android:id="@+id/artworkImageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/track_artwork_description"
            android:src="@drawable/placeholder"
            app:layout_constrainedWidth="true"
            app:layout_constraintTop_toBottomOf="@id/playerToolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/trackNameTextView"
            app:layout_constraintDimensionRatio="1:1" />

        <!-- Название трека -->
        <TextView
            android:id="@+id/trackNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:textSize="22sp"
            android:textColor="@color/placeholder_base_color"
            android:textStyle="bold"
            android:textAlignment="viewStart"
            android:ellipsize="end"
            android:maxLines="2"
            app:layout_constraintTop_toBottomOf="@id/artworkImageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Очень длинное название какого то трека" />

        <!-- Артист -->
        <TextView
            android:id="@+id/artistNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp"
            android:textSize="14sp"
            android:textColor="@color/placeholder_base_color"
            android:textAlignment="viewStart"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintTop_toBottomOf="@id/trackNameTextView"
            app:layout_constraintStart_toStartOf="@id/trackNameTextView"
            app:layout_constraintEnd_toEndOf="@id/trackNameTextView"
            tools:text="Очень длинное название какой-то группы или нескольких исполнителей" />

        <!-- Кнопки управления -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/controlsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/artistNameTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- Играть/Пауза -->
            <ImageView
                android:id="@+id/playPauseButton"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_play"
                android:scaleType="centerInside"
                android:layout_marginTop="28dp"
                android:contentDescription="@string/play_pause_button_description"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:tint="@color/playerButtonPlayColor" />

            <!-- Добавить в плейлист -->
            <ImageView
                android:id="@+id/addPlaylistButton"
                android:layout_width="51dp"
                android:layout_height="51dp"
                android:layout_marginEnd="55dp"
                android:contentDescription="@string/add_to_playlist_description"
                android:src="@drawable/ic_add_to_playlist"
                app:layout_constraintBottom_toBottomOf="@id/playPauseButton"
                app:layout_constraintEnd_toStartOf="@id/playPauseButton"
                app:layout_constraintTop_toTopOf="@id/playPauseButton" />

            <!-- Лайк -->
            <ImageView
                android:id="@+id/likeButton"
                android:layout_width="51dp"
                android:layout_height="51dp"
                android:src="@drawable/ic_like"
                android:contentDescription="@string/add_to_favorites_description"
                android:layout_marginStart="55dp"
                app:layout_constraintStart_toEndOf="@id/playPauseButton"
                app:layout_constraintTop_toTopOf="@id/playPauseButton"
                app:layout_constraintBottom_toBottomOf="@id/playPauseButton" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Время под кнопками -->
        <TextView
            android:id="@+id/playbackProgressTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:paddingBottom="@dimen/margin_30dp"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/controlsLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="0:30" />

        <!-- Таблица с инфой -->
        <TableLayout
            android:id="@+id/trackDetailsTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="@dimen/margin_16dp"
            android:stretchColumns="1"
            app:layout_constraintTop_toBottomOf="@id/playbackProgressTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TableRow>
                <TextView
                    style="@style/TrackInfoLabel"
                    android:text="@string/Duration" />
                <TextView
                    style="@style/TrackInfoValue"
                    android:text="5:00"
                    tools:ignore="HardcodedText" />
            </TableRow>

            <TableRow>
                <TextView
                    style="@style/TrackInfoLabel"
                    android:text="@string/Album" />
                <TextView
                    android:id="@+id/collectionNameValueTextView"
                    style="@style/TrackInfoValue"
                    android:layout_width="0dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="Очень длинное название какого то альбомаааааааааааааааа"
                    tools:ignore="HardcodedText" />
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/releaseDateValueTextView"
                    style="@style/TrackInfoLabel"
                    android:text="@string/Year" />
                <TextView
                    style="@style/TrackInfoValue"
                    android:text="1234"
                    tools:ignore="HardcodedText" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="0dp"
                    style="@style/TrackInfoLabel"
                    android:text="@string/Genre" />
                <TextView
                    android:id="@+id/primaryGenreNameValueTextView"
                    style="@style/TrackInfoValue"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="Rock"
                    tools:ignore="HardcodedText" />
            </TableRow>

            <TableRow>
                <TextView
                    style="@style/TrackInfoLabel"
                    android:text="@string/Country" />
                <TextView
                    android:id="@+id/countryValueTextView"
                    android:layout_width="0dp"
                    style="@style/TrackInfoValue"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="Длинное название какой-то определенной страныаааааааааааааааааа"
                    tools:ignore="HardcodedText" />
            </TableRow>

        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>