<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.PlaylistMaker">

    <!-- Toolbar -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/title_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/search"
        app:titleTextAppearance="@style/ToolbarTitle"
        app:navigationIcon="@drawable/ic_arrow_back" />

    <!-- Для поля поиска и кнопки очистки -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:paddingTop="@dimen/tiny_padding"
        android:paddingHorizontal="@dimen/default_padding"
        android:paddingVertical="@dimen/tiny_padding">

        <EditText
            android:id="@+id/inputEditText"
            style="@style/SearchBarEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/util_rounded_corners"
            android:backgroundTint="@color/YP_Light_Gray"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="@dimen/tiny_padding"
            android:textCursorDrawable="@drawable/ic_cursor"
            android:paddingHorizontal="@dimen/small_padding"
            android:imeOptions="actionDone"
            android:singleLine="true"
            tools:text="Очень очень длинный поисковой запрос самый настоящий для проверки работы" />

        <ImageView
            android:id="@+id/clearIcon"
            style="@style/SearchBarIcons"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="@dimen/default_marginEnd"
            android:contentDescription="@string/track_cover"
            android:src="@drawable/ic_clear"
            android:visibility="gone" />
    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/default_padding"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_track" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="102dp">

    <!-- Заглушка ~ Ничего не нашлось -->
    <LinearLayout
        android:id="@+id/placeholderNoResults"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        android:padding="@dimen/default_padding">

        <ImageView
            android:layout_width="@dimen/placeholder_def_size"
            android:layout_height="@dimen/placeholder_def_size"
            android:src="@drawable/placeholder_no_results" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_no_results"
            android:fontFamily="@font/ys_display_medium"
            android:textSize="@dimen/placeholder_text_size"
            android:textColor="@color/placeholder_base_color"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_16dp" />

    </LinearLayout>

    <!-- Заглушка ~ Проблемы со связью -->
    <LinearLayout
        android:id="@+id/placeholderServerError"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        android:padding="@dimen/default_padding">

        <ImageView
            android:layout_width="@dimen/placeholder_def_size"
            android:layout_height="@dimen/placeholder_def_size"
            android:src="@drawable/placeholder_server_error" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_server_error_text"
            android:fontFamily="@font/ys_display_medium"
            android:textSize="@dimen/placeholder_text_size"
            android:textColor="@color/placeholder_base_color"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_16dp" />

        <Button
            android:id="@+id/refreshButton"
            android:layout_width="91dp"
            android:layout_height="36dp"
            android:text="@string/refresh_button_text"
            android:fontFamily="@font/ys_display_medium"
            android:textSize="@dimen/text_size_14sp"
            android:layout_marginTop="@dimen/margin_24dp"
            android:textAllCaps="false"
            android:background="@drawable/util_rounded_corners" />
    </LinearLayout>
    </FrameLayout>

</LinearLayout>
